# nav-competition-icra2022-drl-vo

./: .bashrc  .bashrc_melodic  README.md  Singularityfile.def  Singularityfile_melodic.def  entrypoint.sh  out.txt  report_test.py  requirements.txt  roslauncher.py  run.py  run_drl_vo.py  singularity_run.sh  test.sh
drl_vo/barn_msgs/: package.xml
drl_vo/drl_vo_barn_nav/launch/: drl_vo_inference.launch
drl_vo/drl_vo_barn_nav/src/: barn_data_pub.py  drl_vo_inference.py  move_base.py  publish_goal.py  pure_pursuit.py
jackal_helper/: CMakeLists.txt
jackal_helper/configs/params/: costmap_common_params.yaml
jackal_helper/configs/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
jackal_helper/launch/: gazebo_launch.launch  move_base_DWA.launch  move_base_drl_vo.launch  move_base_melodic.launch
jackal_helper/worlds/: world_2_new_simple.world
res/: drl_vo_out.txt
