<?xml version="1.0"?>
<package>
  <name>barn_msgs</name>
  <version>1.1.3</version>
  <description>barn messages</description>
  <maintainer email="xzt">XZT</maintainer>
  <license>BSD</license>
  <url type="website">xzt</url>
  <author email="xzt">XZT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
